Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -9,7 +9,7 @@
 At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012. In order to assess  the progress made towards achieving the environmental and health objectives of the Protocol, a
 list of questions was given to the subsidiary bodies of the Air Convention. Several of these questions were related to the trends of air pollution in Europe. 
 
-In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
+In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO Air Quality Guidelines (AQG) values for PM$_{2.5}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
 \QUERY{Sverre to say why we did not cover VOC}
 
 Unfortunately, the EMEP observational network is dominated by sites in western Europe and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in this chapter is only valid for a part of the EMEP domain. As discussed in chapter \ref{ch:emis2019}, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note however, that the uncertainties related to emissions and their trends in the eastern countries are large (see chapter \ref{ch:emis2019}).
@@ -24,7 +24,7 @@ Unfortunately, the EMEP observational network is dominated by sites in western E
 %*Exceedances of Cls
 
 \section{\label{EMEPmodelcalc}{Setup for EMEP MSC-W model calculations}}
-The EMEP MSC-W model version rv4.42 has been used for the all the model runs for years 2000 to 2019. The horizontal resolution is \resZO, with 20 vertical layers (the lowest with a height of approximately 50 meters).
+The EMEP MSC-W model version rv4.42 has been used to perform model runs for years from 2000 through 2019. The horizontal resolution is \resZO, with 20 vertical layers (the lowest with a height of approximately 50 meters).
  Meteorology, emissions, boundary conditions and forest fires for the respective years have been used as input. Meteorological data have been
  derived from ECMWF-IFS(cy40r1) simulations for the years 2000 to 2018 and a ECMWF-IFS(cy46r1) simulation for 2019 (see Section~\ref{sec:meteo}). 
  The boundary conditions for the main gaseous and aerosol species were based on climatological observed values with prescribed trends in trans-Atlantic fluxes, while the Mace
@@ -40,7 +40,7 @@ Volcanic \sox emissions from passive degassing of Italian volcanoes (Etna,
 Stromboli and Vulcano) are those reported by
 Italy. \sox and PM emissions from volcanic eruptions of Icelandic volcanoes in the period 2000-2019 (Eyjafjallaj\"okull in 2010, Gr{\'{\i}}msv{\"{o}}tn in 2011  and  Bar\dh{}arbunga in 2014-2015) are reported by Iceland. 
  
-The speciation of PM emissions into emissions of EC, OM and `remPPM' (remaining PPM) components was based on ECLIPSE v6b emission data \footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}}. These ECLIPSE emissions are given in 5-year intervals (2000, 2005, etc.); intermediate years were derived by linear interpolation. However, all years after 2015 used the 2016 speciation of PM emissions. The VOC speciation was based upon data from various CAMS datasets as described in \cite{R2020:ModDev}, and NOx speciation into NO, \ce{NO2} and `shipNOx' was based upon \QUERY{Older IIASA? Who did this - what is source?}. For NOx and VOC the same (sector-based) speciations were used for all years.
+The speciation of PM emissions into emissions of elemental carbon (EC), promary organic aerosol (POA) OM and `remPPM' (remaining PPM) components was based on ECLIPSE v6b emission data \footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}}. These ECLIPSE emissions are given in 5-year intervals (2000, 2005, etc.); intermediate years were derived by linear interpolation. However, all years after 2015 used the 2016 speciation of PM emissions. The VOC speciation was based upon data from various CAMS datasets as described in \cite{R2020:ModDev}, and NOx speciation into NO, \ce{NO2} and `shipNOx' was based upon \QUERY{Older IIASA? Who did this - what is source?}. For NOx and VOC the same (sector-based) speciations were used for all years.
 Soil NO$_x$ emissions were based on the new CAMS-GLOB-SOIL v2.2 NO$_x$ inventory \citet{SimpsonDarras:2021}. Soil-NO$_x$ emissions which are related to the use of fertilizer were not taken from the CAMS-GLOB-SOIL inventory, as these are already included in the EMEP (CEIP) emissions.
 A revised set of anthropogenic emissions for all the years 2000-2019 has been used in the model calculations (including all the reported and re-reported data by June 2021), see Chapter~\ref{ch:emis2019}.
 
@@ -67,7 +67,7 @@ is the solid (filterable)  component of POA, and CPOA is the condensable
 component of POA.
 
 It has clearly shown that some countries include, and some countries
-exclude the CPOA component from their reporting of \pmfine. Further, even
+exclude the CPOA component from their reporting of \pmfine emissions. Further, even
 for the same country, CPOA might be included or excluded differently for
 different sectors. In many case, countries did not have the technical
 information needed to know the extent of inclusion for specific
@@ -81,7 +81,7 @@ emit identical amounts of pollutants. Given that POA emissions make up a
 substantial fraction of \pmfine emissions in Europe, these uncertainties
 also make it difficult to interpret the emission trends. Countries that
 tend to exclude CPOA (such as Germany) will have their \pmfine emission
-rends more dominated by trends in S- and N- components, whereas countries
+trends more dominated by trends in S- and N- components, whereas countries
 which include CPOA (e.g. Norway) will have their trends more controlled
 by POA emissions.
 
@@ -100,7 +100,7 @@ EMEP reported data for the European region, then the emissions of both POA and E
 
 
 \section{\label{OBSTrends}{Observations}}
-The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}. The time series have been selected based on statistical criteria as described in section  \ref{Method}. Sites which are situated higher than 2000 m.a.s.l. have been excluded (except DE0003R at 2007 m.a.s.l.) in addition to NO0042G at 474 m.a.s.l. These sites are often measuring above the boundary layer, which is not well represented by a model with a resolution of \resZO. For EC and OC, only observations using the reference method EUSSAR-2 \citep{Cavalli:EUSAAR} has been selected and due to lack of long consistent time series, statistics are only done for the last decade for these compounds. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
+The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}). The time series have been selected based on statistical criteria as described in section  \ref{Method}. Sites which are situated higher than 2000 m.a.s.l. have been excluded (except DE0003R at 2007 m.a.s.l.) in addition to NO0042G at 474 m.a.s.l. These sites are often measuring above the boundary layer, which is not well represented by a model with a resolution of \resZO. For EC and OC, only observations using the reference method EUSSAR-2 \citep{Cavalli:EUSAAR} has been selected and due to lack of long consistent time series, statistics are only done for the last decade for these compounds. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
 
 \section{\label{Method}{Method for calculation of trends}}
 Both observed and modelled trends were processed with the pyaerocom software (\url{https://github.com/metno/pyaerocom}, version XXX) for the following periods: 2000-2019, 2005-2019, 2000-2010, and 2010-2019. All observations were provided via the EBAS database. 
@@ -132,9 +132,9 @@ The trends and their uncertainties for all the individual sites are available fr
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
-The SO$_x$ emissions has declined by more than 80\% (-4.3\% yr$^{-1}$) within the western EMEP domain (EU27+UK+EFTA countries) the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends the latter years (\cite{aas2019global,TFMM2016, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}). A majority of the time series show significant trends for the 20year period for all the compounds.
+The SO$_x$ emissions have declined by more than 80\% (-4.3\% yr$^{-1}$) within the western EMEP domain (EU27+UK+EFTA countries) the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends published lately (\cite{aas2019global,TFMM2016, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}). A majority of the time series show significant trends for the 20 year period for all the compounds.
 
-The spatial distribution of the relative trends (Figure~\ref{fig:Strends_map}) show that the decreases have been quite homogeneous across Europe west of Russia, though somewhat higher in Spain and France and lower in Poland. It has been higher reductions in the primary \soii compared to  secondary \soiv. The greater decrease in \soii compared to secondary sulphate is due to a combination of higher oxidation rate (hence more \soii converted to \soiv) and increased dry deposition rate of \soii. The oxidation capacity of the atmosphere have increased as the emissions have decreased \cite{Dalsoren2016}, and the clouds have become less acidic due to less \soii and only slightly decrease in \nhiii, which has increased the oxidation rate of \soii to \soiv via the ozone pathway (\cite{Banzhaf2015, Redington2009}). In addition, less acidity in the environment probably leads to more efficient dry deposition of \soii (\cite{Fowler_et_al:2009}) 
+The spatial distribution of the relative trends (Figure~\ref{fig:Strends_map}) show that the decreases have been quite homogeneous across Europe west of Russia, though somewhat higher in Spain and France and lower in Poland. It has been higher reductions in the primary \soii compared to  secondary \soiv. The greater decrease in \soii compared to secondary sulphate is due to a combine effect of higher oxidation rate (hence more \soii converted to \soiv) and increased dry deposition rate of \soii. The oxidation capacity of the atmosphere have increased as the emissions have decreased \cite{Dalsoren2016}, and the clouds have become less acidic due to less \soii and only slightly decrease in \nhiii, which has increased the oxidation rate of \soii to \soiv via the ozone pathway (\cite{Banzhaf2015, Redington2009}). In addition, less acidity in the environment probably leads to more efficient dry deposition of \soii (\cite{Fowler_et_al:2009}) 
 
 On average the reductions in observations for the last 20 years (2000-2019) are -3.9, -3.2 and -3.1\% yr$^{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -5.1, -3.8 and -4.3\% yr$^{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the absolute trend is higher in observations, but within the 95\% confidence interval to the modelled trends.  \COMMENT{WAa: Hilde, can you include a sentence why the model and emissions is overestimating?}
 \COMMENT{Hilde: It is not clear why the trends calculated by the model is larger than the trends in observations. However, it is worth noting that also the trends in reported emissions are larger than the trends in the different sulphur components in observations. The mismatch between the calculated trends and the observed trends are particularly large for Eastern Spain and parts of Eastern Europe. These differences between the calculated trends, the trends in emissions and the trends in observations might potentially indicate that the emission reductions reported by the countries are somewhat optimistic for some countries. However, firm conclusions is difficult to draw as we do not monitor the full sulphur budget (e.g. dry deposition of sulphur is lacking). Furthermore, changes in emissions distribution that are not correctly accounted for or missing processes in the model could also play a role. }
@@ -605,7 +605,10 @@ Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed t
 The observations and model simulations indicate more sites with significant trends and larger \PM[10] and \PM[2.5] average decreases for the warm seasons. For the cold seasons, when PM pollution is typically more serious, the relative decreasing trends are in general smaller, and the number of sites with non-significant trends is larger, which is especially pronounced for observed \PM[10] trends.
 
 PM is a complex pollutant, consisting of aerosol species both emitted
-directly and formed from gaseous precursors.Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions are contribute to decrease PM concentrations. In the western parts of EMEP (EU \&UK \&EFTA), where the considered sites are located, the emissions of primary \PM[10] and \PM[2.5] were reduced by 32 and 35 \%, respectively, from 2000 to 2019. The largest in the same period was the reduction in \sox emissions (81 \%), resulting in 61 \% observed decrease of \soiv (70 \% according to the model). Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model). The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%. Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon have only been analysed for a 2010-2019 period (see discussion in \ref{sec:trendsECOC}). The chemical  
+directly and formed from gaseous precursors.Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions are contribute to decrease PM concentrations. In the western parts of EMEP (EU \&UK \&EFTA), where the considered sites are located, the emissions of primary \PM[10] and \PM[2.5] were reduced by 32 and 35 \%, respectively, from 2000 to 2019. The largest in the same period was the reduction in \sox emissions (81 \%), resulting in 61 \% observed decrease of \soiv (70 \% according to the model). Following the reduction of \noii emissions by 48 \%, observed \noiii concentrations decreased slightly less, i.e. by 38 \% (44 \% according to the model). This was partly due to a rather moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate. 
+
+\COMMENT{Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model)}
+ The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%. Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon have only been analysed for a 2010-2019 period (see discussion in \ref{sec:trendsECOC}). The examples of the changes in the chemical composition of \PM[2.5] from 2000(2002) to 2019 are given on Figure \ref{fig:KEX4} for the only six sites with enough measurements for deriving the mass balance. 
 
 Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing. Significant trends have been estimated from observational data for 78 \% of sites for \PM[10] and 84 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively. During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (36 \% from model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] is 46 \%  (48 \% estimated by the model). We find quite a good correspondence between observed and model simulated trends in PM concentrations. 
 
@@ -1117,7 +1120,9 @@ OC/\pmfine.
 
 
 The relative contribution of carbonaceous aerosol, OM (assuming OM = OC $\times$
-1.4 for Ispra and 1.7 for the other sites)
+1.4 for Ispra
+\footnote{The lower factor is needed for Ispra to keep mass balance $\le$100\%.}
+and 1.7 for the other sites)
  and EC, to the \pmfine mass concentration along with the major
 SIA species illustrates the importance of the OM fraction for a further
 reduction in \pmfine mass concentration (Fig.~\ref{fig:KEX4}). As a first step,
