--- a/report.tex
+++ b/report.tex
@@ -335,7 +335,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
+\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
 %\includeonly{chapterMeasurementDevelopments}
 %\includeonly{chapterEmis2019}
 
